--- a/style.css
+++ b/style.css
@@ -5,7 +5,12 @@
 }
 
 body {
-  height: 1000;
+  width: 100%;
+  height: 100%;
+  max-height: 100vh;
+  max-height: 100%;
+  max-width: 100%;
+
 }
 
 .header {
@@ -113,9 +118,15 @@ section {
   top: 0;
   bottom: 0;
   width: 100%;
-  height: 1350px;
+  height: auto;
+  max-height: 100vh;
   object-fit: cover;
+  max-width: 100%;
+  background-size: cover;
+  
+  
 }
+
 
 .blank {
   position: absolute;
@@ -128,6 +139,7 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
 .Saga-senai {
@@ -171,6 +183,12 @@ section {
   align-items: center;
 }
 
+@media (max-width: 1200px) {
+  .black{
+    max-width: 100%;
+  }
+  
+}
 .texto1 {
   display: flex;
   flex-direction: column;
@@ -280,7 +298,7 @@ section {
 .grid-item2 {
   display: flex;
   align-items: center;
-  margin-left: 1000px;
+  margin-left: 1200px;
   margin-top: 150px;
   gap: 20px;
   padding: 20px;
@@ -291,6 +309,12 @@ section {
   z-index: 300;
 }
 
+@media (max-width: 1200px) {
+  .grid-item2 {
+    display: flex;
+    margin-left: 700px;
+  }
+}
 
 .imagem4,
 .imagem5 {
